--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
+	      <h1>hello</h1>
         <a class="navbar-brand brand-logo mr-5" href="index.html"><img src=# class="mr-2" alt=""/></a>
         <a class="navbar-brand brand-logo-mini" href="index.html"><img src=# alt=""/></a>
       </div>
